donor reg donor login kid details

--- a/MAWteam13/app/src/main/res/layout/donor_reg.xml
+++ b/MAWteam13/app/src/main/res/layout/donor_reg.xml
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Enter name"
+        android:hint="Enter name"
         tools:layout_editor_absoluteX="150dp"
         tools:layout_editor_absoluteY="16dp"
         android:layout_alignParentTop="true"
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="phone"
-        android:text="Enter number"
+        android:hint="Enter number"
         tools:layout_editor_absoluteX="153dp"
         tools:layout_editor_absoluteY="101dp"
         android:layout_marginTop="25dp"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:text="Enter email address"
+        android:hint="Enter email address"
         tools:layout_editor_absoluteX="153dp"
         tools:layout_editor_absoluteY="192dp"
         android:layout_above="@+id/Daddval"
@@ -117,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="Enter address"
+        android:hint="Enter address"
         android:inputType="textPostalAddress"
         tools:layout_editor_absoluteX="153dp"
         tools:layout_editor_absoluteY="267dp"
