--- a/NewMAW/app/src/main/res/layout/activity_tracker.xml
+++ b/NewMAW/app/src/main/res/layout/activity_tracker.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btnTrack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button  = "
+        android:text="Button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="101dp" />
