--- a/NewMAW/app/src/main/res/layout/activity_donor_login.xml
+++ b/NewMAW/app/src/main/res/layout/activity_donor_login.xml
@@ -17,6 +17,9 @@
         android:layout_toLeftOf="@+id/btnSignup"
         android:layout_toStartOf="@+id/btnSignup"
         android:layout_marginRight="59dp"
+        
+        android:background="#005eff"
+        android:textColor="#ffffff"
         android:layout_marginEnd="59dp" />
 
 
@@ -27,6 +30,9 @@
         android:text="Sign up"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="387dp"
+        android:background="#005eff"
+        android:textColor="#ffffff"
+
         android:layout_below="@+id/etPassword"
         android:layout_alignRight="@+id/etPassword"
         android:layout_alignEnd="@+id/etPassword"
