--- a/NewMAW/app/src/main/res/layout/activity_donor_reg.xml
+++ b/NewMAW/app/src/main/res/layout/activity_donor_reg.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name : "
+        android:textColor="#005eff"
+        android:fontFamily="monospace"                               
         tools:layout_editor_absoluteX="36dp"
         tools:layout_editor_absoluteY="30dp"
         android:layout_alignBaseline="@+id/etName"
@@ -22,6 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contact : "
+        
+        android:textColor="#005eff"
+        android:fontFamily="monospace"
         tools:layout_editor_absoluteY="113dp"
         tools:layout_editor_absoluteX="36dp"
         android:layout_alignBaseline="@+id/etPhone"
@@ -36,6 +41,8 @@
         android:text="Email address : "
         tools:layout_editor_absoluteY="201dp"
         tools:layout_editor_absoluteX="36dp"
+        android:textColor="#005eff"
+        android:fontFamily="monospace"                              
         android:layout_alignBaseline="@+id/etMail"
         android:layout_alignBottom="@+id/etMail"
         android:layout_alignParentLeft="true"
@@ -48,6 +55,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Address : "
+        
+        android:textColor="#005eff"
+        android:fontFamily="monospace"
         tools:layout_editor_absoluteY="277dp"
         tools:layout_editor_absoluteX="36dp"
         android:layout_centerVertical="true"
@@ -61,6 +71,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
+        
+        android:textColor="#005eff"
+        android:fontFamily="monospace"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="387dp"
         android:layout_alignParentBottom="true"
