--- a/NewMAW/app/src/main/res/layout/activity_main.xml
+++ b/NewMAW/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,10 @@
         android:text="Volunteer"
         android:onClick="volunteer"
         android:layout_marginTop="80dp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        
+        android:background="#005eff"
+        android:textColor="#ffffff"/>
 
     <Button
         android:id="@+id/btnDonor"
@@ -24,5 +27,8 @@
         android:text="Donor"
         android:layout_marginTop="80dp"
         android:layout_gravity="center"
+        
+        android:background="#005eff"
+        android:textColor="#ffffff"
          />
 </LinearLayout>
