--- a/NewMAW/app/src/main/res/layout/activity_donor_reg.xml
+++ b/NewMAW/app/src/main/res/layout/activity_donor_reg.xml
@@ -136,7 +136,7 @@
         android:layout_alignStart="@+id/etMail" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/etPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btnRegister"
