--- a/NewMAW/app/src/main/res/layout/activity_wish_activity.xml
+++ b/NewMAW/app/src/main/res/layout/activity_wish_activity.xml
@@ -71,19 +71,33 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/et_search"/>
+        android:id="@+id/et_search"
+        android:layout_toLeftOf="@+id/btnCity1"
+        android:layout_toStartOf="@+id/btnCity1" />
 
     <TextView
         android:id="@+id/tvCity1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="67dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginTop="59dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="22dp"
         android:text="Want to meet Sachin,Delhi"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/et_search"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Filter"
+        android:layout_marginRight="27dp"
+        android:layout_marginEnd="27dp"
+        android:layout_alignBaseline="@+id/et_search"
+        android:layout_alignBottom="@+id/et_search"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
