--- a/NewMAW/app/src/main/res/layout/activity_donor_login.xml
+++ b/NewMAW/app/src/main/res/layout/activity_donor_login.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f6f7eb"
     tools:context="com.example.unmadesai.newmaw.donor_login">
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Log In"
+        android:backgroundTint="#25ced1"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="387dp"
         android:layout_alignBaseline="@+id/btnSignup"
@@ -32,6 +34,7 @@
         tools:layout_editor_absoluteY="387dp"
         android:background="#005eff"
         android:textColor="#ffffff"
+        android:backgroundTint="#25ced1"
 
         android:layout_below="@+id/etPassword"
         android:layout_alignRight="@+id/etPassword"
@@ -49,7 +52,7 @@
         android:hint="Enter username"
         tools:layout_editor_absoluteX="153dp"
         tools:layout_editor_absoluteY="192dp"
-        android:layout_marginTop="59dp"
+        android:layout_marginTop="53dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
