--- a/NewMAW/app/src/main/res/layout/activity_main.xml
+++ b/NewMAW/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,29 +7,44 @@
     android:orientation="horizontal"
     tools:context="com.example.unmadesai.newmaw.MainActivity"
     >
-<ImageView
+
+    <Button
+        android:backgroundTint="#25ced1"
+        android:id="@+id/btnDonor"
+        android:layout_width="331dp"
+        android:layout_height="wrap_content"
+        android:text="Donate"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="265dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:src="@mipmap/wish"/>
+    android:src="@mipmap/wish"
+        android:layout_below="@+id/btnDonor"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/imageView3" />
     <Button
+        android:backgroundTint="#25ced1"
+        android:fontFamily="#fafffd"
         android:id="@+id/btnVolunteer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Volunteer"
         android:onClick="volunteer"
-        android:layout_marginTop="150dp"
         android:layout_gravity="center"
 
         android:background="#005eff"
         android:textColor="#ffffff"
-        android:layout_marginLeft="-330dp"/>
+        android:layout_below="@+id/imageView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-    <Button
-        android:id="@+id/btnDonor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="265dp" />
-
-</LinearLayout>
+</RelativeLayout>
