--- a/NewMAW/app/src/main/res/layout/activity_tracker.xml
+++ b/NewMAW/app/src/main/res/layout/activity_tracker.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:backgroundTint="#f6f7eb"
     android:layout_height="match_parent"
     tools:context="com.example.unmadesai.newmaw.TrackerActivity">
 
@@ -11,42 +12,62 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Wishes Near Me"
+        android:backgroundTint="#25ced1"
         android:background="#005eff"
         android:textColor="#ffffff"
+        android:layout_marginBottom="134dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="101dp" />
+        android:layout_alignRight="@+id/tvLongitude"
+        android:layout_alignEnd="@+id/tvLongitude"
+        android:layout_alignLeft="@+id/tvLatitude"
+        android:layout_alignStart="@+id/tvLatitude" />
 
     <TextView
         android:id="@+id/tvLatitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="171.62 "
-        android:layout_above="@+id/tvLongitude"
-        android:layout_alignLeft="@+id/tvLongitude"
-        android:layout_alignStart="@+id/tvLongitude"
-        android:layout_marginBottom="123dp"
-        android:textColor="#005eff"
-        />
+        android:textSize="20dp"
+        android:textColor="#292f36"
+        android:layout_marginBottom="88dp"
+        android:layout_above="@+id/btnTrack"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_alignStart="@+id/textView6" />
 
     <TextView
         android:id="@+id/tvLongitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="83.42"
+        android:textSize="20dp"
         tools:layout_editor_absoluteX="163dp"
         tools:layout_editor_absoluteY="176dp"
-        android:layout_above="@+id/btnTrack"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="57dp"
-        android:textColor="#005eff"
-        />
+        android:textColor="#292f36"
+
+        android:layout_marginLeft="77dp"
+        android:layout_marginStart="77dp"
+        android:layout_below="@+id/textView6"
+        android:layout_toRightOf="@+id/tvLatitude"
+        android:layout_toEndOf="@+id/tvLatitude" />
 
     <TextView
         android:id="@+id/tvLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
+        android:textColor="#292f36"
+
         tools:layout_editor_absoluteY="319dp"
         tools:layout_editor_absoluteX="163dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:textColor="#292f36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="39dp"
+        android:textSize="20dp"
+        android:text="Your current location is"
+        android:layout_above="@+id/tvLatitude"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
