--- a/NewMAW/app/src/main/res/layout/activity_main.xml
+++ b/NewMAW/app/src/main/res/layout/activity_main.xml
@@ -11,39 +11,43 @@
     <Button
         android:backgroundTint="#25ced1"
         android:id="@+id/btnDonor"
-        android:layout_width="331dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Donate"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="265dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="70dp"
+        android:layout_marginStart="70dp"
+        android:layout_alignTop="@+id/btnVolunteer"
         android:layout_alignParentLeft="true"
+        android:fontFamily="#fafffd"
+
+
         android:layout_alignParentStart="true" />
 
     <ImageView
     android:layout_width="match_parent"
     android:layout_height="300dp"
     android:src="@mipmap/wish"
-        android:layout_below="@+id/btnDonor"
+        android:id="@+id/imageView3"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/imageView3" />
+        android:layout_alignParentStart="true" />
     <Button
         android:backgroundTint="#25ced1"
+
         android:fontFamily="#fafffd"
         android:id="@+id/btnVolunteer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Volunteer"
         android:onClick="volunteer"
-        android:layout_gravity="center"
-
         android:background="#005eff"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
+        android:layout_marginTop="41dp"
+        android:layout_marginRight="63dp"
+        android:layout_marginEnd="63dp"
         android:layout_below="@+id/imageView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
