--- a/NewMAW/app/src/main/res/layout/activity_tracker.xml
+++ b/NewMAW/app/src/main/res/layout/activity_tracker.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:backgroundTint="#f6f7eb"
+    android:background="#f6f7eb"
+
     android:layout_height="match_parent"
     tools:context="com.example.unmadesai.newmaw.TrackerActivity">
 
