--- a/NewMAW/app/src/main/res/layout/activity_wish_activity.xml
+++ b/NewMAW/app/src/main/res/layout/activity_wish_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f6f7eb"
     tools:context="com.example.unmadesai.newmaw.wish_activity">
 
 
