--- a/NewMAW/app/src/main/res/layout/activity_main.xml
+++ b/NewMAW/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,12 @@
         android:id="@+id/btnDonor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="265dp" />
+        android:text="DONOR"
+        android:layout_marginTop="150dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="100dp"
+        android:background="#005eff"
+        android:textColor="#ffffff"
+        />
 
 </LinearLayout>
