--- a/NewMAW/app/src/main/res/layout/activity_tracker.xml
+++ b/NewMAW/app/src/main/res/layout/activity_tracker.xml
@@ -72,4 +72,24 @@
         android:text="Your current location is"
         android:layout_above="@+id/tvLatitude"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/tvLatitude"
+        android:layout_alignBottom="@+id/tvLatitude"
+        android:layout_toEndOf="@+id/tvLatitude"
+        android:layout_toRightOf="@+id/tvLatitude"
+        android:text="Lat" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Long"
+        android:layout_alignBaseline="@+id/tvLongitude"
+        android:layout_alignBottom="@+id/tvLongitude"
+        android:layout_toRightOf="@+id/textView6"
+        android:layout_toEndOf="@+id/textView6" />
 </RelativeLayout>
